Changelog
=========

1.0 (unreleased)
----------------

- added booking action to iteration view [miziodel]
- Ajaxified add story form [simahawk]
- Add story form hidden by default [simahawk]
- Add close icon to actions tooltips [simahawk]
- Added IUserStoriesListing adapter to listing stories by user [giorgio]
- Removed IMyStoriesListing adapter [giorgio]
- added "Simplemanagement: Manage project" permission to
  Manager, PM and Site Administrator [giorgio]
- fix Dexterity2.0 relations issue [giorgio]
- added workflow to discussion item [giorgio]
- added plone.formwidget.contenttree dependency [giorgio]
- UI improvements [giorgio]
- disabled form releated kss [giorgio]
- added customer, employee, PM roles and groups [giorgio]
- updated translations [giorgio]
- added my tickets view in dasboard [gborelli]
- added project dashboard view [gborelli]
- added IMyStoriesLIsting adapter [gborelli]
- changed dashboard view [gborelli]
- added IStoryListing adapter for INavigationRoot [gborelli]
- moved to collective namespace [simahawk]
- prevent project view to brake if project created by zope admin [simahawk]
- users' dashboard enhancements [gborelli]
- added server side method to sort stories in iteration view [gborelli]
- Change story status from iteration view fixes #9 [gborelli]
- checked permission to add booking, story etc [gborelli]
- added reopen transition on story wf - from done status to todo [gborelli]
- added markdown support to story and epic [gborelli]
- added Wysiwyg to Project notes [gborelli]
- added dashboard view [gborelli]
- added project overview view [gborelli]
- changed story view [gborelli]
- refactored timing_status method [gborelli]
- added macros for assignees, timings and epic [gborelli]
- normalized timings dict [gborelli]
- allowed discussion for story [gborelli]
- added collective.js.jqueryui [gborelli]
- changed style for comments in iteration view [gborelli]
- added static resources (javascript and css) [gborelli]